--- a/templates/main.html
+++ b/templates/main.html
@@ -86,7 +86,7 @@
           'line-color': 'rgb(58, 225, 255)',
           'width': 'data(relationship)',
           'opacity': '0.5',
-          'curve-style': 'bezier',
+          'curve-style': 'straight',
         }
       }
     ]
