Fixed CY layout.

--- a/templates/main.html
+++ b/templates/main.html
@@ -100,7 +100,7 @@
 
     cy.ready( function(){
       cy.layout({
-        name: 'random',
+        name: 'circle',
         animate: 'end',
         animationDuration: 2500,
         animationEasing: 'spring(500, 40)',
